Change toggle position on page to prevent overlap

--- a/19-theme-clock/style.css
+++ b/19-theme-clock/style.css
@@ -40,8 +40,9 @@ body {
   border: none;
   border-radius: 4px;
   padding: 8px 12px;
-  position: absolute;
-  top: 100px;
+  margin-bottom: 80px;
+  position: relative;
+  top: 0;
   cursor: pointer;
 }
 
